fixed null error

--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -2,12 +2,11 @@
 # multi zookeeper & kafka cluster list
 ######################################
 kafka.eagle.zk.cluster.alias=cluster1
-cluster1.zk.list=127.0.0.1:2181/ssl
+cluster1.zk.list=127.0.0.1:2181
 cluster1_0_1.zk.list=127.0.0.1:2181/v_1_0_1
 cluster2.zk.list=127.0.0.1:2181/plain
 cluster3.zk.list=127.0.0.1:2181/scram
 cluster4.zk.list=127.0.0.1:2182
-
 ######################################
 # zookeeper enable acl
 ######################################
@@ -15,24 +14,20 @@ cluster4.zk.acl.enable=false
 cluster4.zk.acl.schema=digest
 cluster4.zk.acl.username=test
 cluster4.zk.acl.password=test123
-
 ######################################
 # broker size online list
 ######################################
 cluster1.kafka.eagle.broker.size=10
 cluster1_0_1.kafka.eagle.broker.size=10
 cluster4.kafka.eagle.broker.size=10
-
 ######################################
 # zk client thread limit
 ######################################
 kafka.zk.limit.size=25
-
 ######################################
 # kafka eagle webui port
 ######################################
 kafka.eagle.webui.port=8048
-
 ######################################
 # kafka offset storage
 ######################################
@@ -41,31 +36,25 @@ cluster1_0_1.kafka.eagle.offset.storage=kafka
 cluster2.kafka.eagle.offset.storage=kafka
 #cluster3.kafka.eagle.offset.storage=kafka
 cluster4.kafka.eagle.offset.storage=kafka
-
 ######################################
 # kafka metrics, 15 days by default
 ######################################
 kafka.eagle.metrics.charts=true
 kafka.eagle.metrics.retain=15
-
 ######################################
 # master quartz time
 ######################################
 kafka.eagle.quartz.master.time=* */1 * * * ?
 kafka.eagle.distributed.enable=false
-
-
 ######################################
 # kafka sql topic records max
 ######################################
 kafka.eagle.sql.topic.records.max=5000
 kafka.eagle.sql.fix.error=true
-
 ######################################
 # delete kafka topic token
 ######################################
 kafka.eagle.topic.token=keadmin
-
 ######################################
 # kafka sasl authenticate
 ######################################
@@ -77,17 +66,15 @@ cluster1.kafka.eagle.sasl.client.id=
 cluster1.kafka.eagle.blacklist.topics=
 cluster1.kafka.eagle.sasl.cgroup.enable=false
 cluster1.kafka.eagle.sasl.cgroup.topics=kafka20191230,kafka20191217
-
 cluster4.kafka.eagle.sasl.enable=false
 cluster4.kafka.eagle.sasl.protocol=SASL_PLAINTEXT
 cluster4.kafka.eagle.sasl.mechanism=PLAIN
 cluster4.kafka.eagle.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="admin" password="admin-secret";
 cluster4.kafka.eagle.sasl.client.id=
-
 ######################################
 # kafka ssl authenticate
 ######################################
-cluster1.kafka.eagle.ssl.enable=true
+cluster1.kafka.eagle.ssl.enable=false
 cluster1.kafka.eagle.ssl.protocol=SSL
 cluster1.kafka.eagle.ssl.truststore.location=/Users/dengjie/workspace/ssl/certificates/kafka.truststore
 cluster1.kafka.eagle.ssl.truststore.password=ke123456
@@ -96,7 +83,6 @@ cluster1.kafka.eagle.ssl.keystore.password=ke123456
 cluster1.kafka.eagle.ssl.key.password=ke123456
 cluster1.kafka.eagle.ssl.cgroup.enable=false
 cluster1.kafka.eagle.ssl.cgroup.topics=
-
 ######################################
 # kafka jdbc driver address
 ######################################
@@ -104,7 +90,6 @@ kafka.eagle.driver=com.mysql.jdbc.Driver
 kafka.eagle.url=jdbc:mysql://127.0.0.1:3306/ke?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 kafka.eagle.username=root
 kafka.eagle.password=123456
-
 #kafka.eagle.driver=org.sqlite.JDBC
 #kafka.eagle.url=jdbc:sqlite:/Users/dengjie/webserver/hadoop/sqlite/ke.db
 #kafka.eagle.username=root
