--- a/kafka-eagle-web/src/main/resources/conf/system-config.properties
+++ b/kafka-eagle-web/src/main/resources/conf/system-config.properties
@@ -71,6 +71,7 @@ cluster3.kafka.eagle.ssl.truststore.password=
 cluster3.kafka.eagle.ssl.keystore.location=
 cluster3.kafka.eagle.ssl.keystore.password=
 cluster3.kafka.eagle.ssl.key.password=
+cluster3.kafka.eagle.blacklist.topics=
 cluster3.kafka.eagle.ssl.cgroup.enable=false
 cluster3.kafka.eagle.ssl.cgroup.topics=
 ######################################
