fixed issues[#383] and support jmx ssl

--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -2,7 +2,7 @@
 # multi zookeeper & kafka cluster list
 ######################################
 kafka.eagle.zk.cluster.alias=cluster1
-cluster1.zk.list=127.0.0.1:2181
+cluster1.zk.list=127.0.0.1:2181/jmx_ssl
 cluster1_0_1.zk.list=127.0.0.1:2181/v_1_0_1
 cluster2.zk.list=127.0.0.1:2181/plain
 cluster3.zk.list=127.0.0.1:2181/scram
@@ -28,6 +28,15 @@ kafka.zk.limit.size=25
 # kafka eagle webui port
 ######################################
 kafka.eagle.webui.port=8048
+######################################
+# kafka jmx acl and ssl authenticate
+######################################
+cluster1.kafka.eagle.jmx.acl=true
+cluster1.kafka.eagle.jmx.user=keadmin
+cluster1.kafka.eagle.jmx.password=keadmin123
+cluster1.kafka.eagle.jmx.ssl=true
+cluster1.kafka.eagle.jmx.truststore.location=/Users/dengjie/workspace/ssl/certificates/kafka.truststore
+cluster1.kafka.eagle.jmx.truststore.password=ke123456
 ######################################
 # kafka offset storage
 ######################################
@@ -74,7 +83,7 @@ cluster4.kafka.eagle.sasl.client.id=
 ######################################
 # kafka ssl authenticate
 ######################################
-cluster1.kafka.eagle.ssl.enable=false
+cluster1.kafka.eagle.ssl.enable=true
 cluster1.kafka.eagle.ssl.protocol=SSL
 cluster1.kafka.eagle.ssl.truststore.location=/Users/dengjie/workspace/ssl/certificates/kafka.truststore
 cluster1.kafka.eagle.ssl.truststore.password=ke123456
