--- a/kafka-eagle-web/src/main/resources/conf/system-config.properties
+++ b/kafka-eagle-web/src/main/resources/conf/system-config.properties
@@ -4,6 +4,7 @@
 kafka.eagle.zk.cluster.alias=cluster1,cluster2
 cluster1.zk.list=tdn1:2181,tdn2:2181,tdn3:2181
 cluster2.zk.list=xdn10:2181,xdn11:2181,xdn12:2181
+
 ######################################
 # zookeeper enable acl
 ######################################
@@ -11,37 +12,55 @@ cluster1.zk.acl.enable=false
 cluster1.zk.acl.schema=digest
 cluster1.zk.acl.username=test
 cluster1.zk.acl.password=test123
+
 ######################################
 # broker size online list
 ######################################
 cluster1.kafka.eagle.broker.size=20
+
 ######################################
 # zk client thread limit
 ######################################
 kafka.zk.limit.size=25
+
 ######################################
 # kafka eagle webui port
 ######################################
 kafka.eagle.webui.port=8048
+
+######################################
+# kafka jmx acl and ssl authenticate
+######################################
+cluster1.kafka.eagle.jmx.acl=false
+cluster1.kafka.eagle.jmx.user=keadmin
+cluster1.kafka.eagle.jmx.password=keadmin123
+cluster1.kafka.eagle.jmx.ssl=false
+cluster1.kafka.eagle.jmx.truststore.location=/Users/dengjie/workspace/ssl/certificates/kafka.truststore
+cluster1.kafka.eagle.jmx.truststore.password=ke123456
+
 ######################################
 # kafka offset storage
 ######################################
 cluster1.kafka.eagle.offset.storage=kafka
 cluster2.kafka.eagle.offset.storage=zk
+
 ######################################
 # kafka metrics, 15 days by default
 ######################################
 kafka.eagle.metrics.charts=true
 kafka.eagle.metrics.retain=15
+
 ######################################
 # kafka sql topic records max
 ######################################
 kafka.eagle.sql.topic.records.max=5000
 kafka.eagle.sql.fix.error=true
+
 ######################################
 # delete kafka topic token
 ######################################
 kafka.eagle.topic.token=keadmin
+
 ######################################
 # kafka sasl authenticate
 ######################################
@@ -61,6 +80,7 @@ cluster2.kafka.eagle.sasl.client.id=
 cluster2.kafka.eagle.blacklist.topics=
 cluster2.kafka.eagle.sasl.cgroup.enable=false
 cluster2.kafka.eagle.sasl.cgroup.topics=
+
 ######################################
 # kafka ssl authenticate
 ######################################
@@ -74,6 +94,7 @@ cluster3.kafka.eagle.ssl.key.password=
 cluster3.kafka.eagle.blacklist.topics=
 cluster3.kafka.eagle.ssl.cgroup.enable=false
 cluster3.kafka.eagle.ssl.cgroup.topics=
+
 ######################################
 # kafka sqlite jdbc driver address
 ######################################
@@ -81,6 +102,7 @@ kafka.eagle.driver=org.sqlite.JDBC
 kafka.eagle.url=jdbc:sqlite:/hadoop/kafka-eagle/db/ke.db
 kafka.eagle.username=root
 kafka.eagle.password=www.kafka-eagle.org
+
 ######################################
 # kafka mysql jdbc driver address
 ######################################
