add thrift rpc replace netty rpc

--- a/kafka-eagle-core/pom.xml
+++ b/kafka-eagle-core/pom.xml
@@ -30,9 +30,9 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>io.netty</groupId>
-            <artifactId>netty-all</artifactId>
-            <version>4.1.52.Final</version>
+            <groupId>org.apache.thrift</groupId>
+            <artifactId>libthrift</artifactId>
+            <version>0.13.0</version>
         </dependency>
     </dependencies>
 </project>
