--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -70,6 +70,7 @@ kafka.eagle.distributed.enable=false
 kafka.eagle.sql.topic.records.max=5000
 kafka.eagle.sql.fix.error=true
 kafka.eagle.sql.worknode.port=8787
+kafka.eagle.sql.worknode.rpc.timeout=30000
 kafka.eagle.sql.worknode.fetch.threshold=20
 kafka.eagle.sql.worknode.fetch.timeout=20000
 kafka.eagle.sql.worknode.server.path=/Users/dengjie/workspace/kafka-eagle-plus/kafka-eagle-common/src/main/resources/works
