fixed topic mbean

--- a/kafka-eagle-web/src/main/resources/conf/system-config.properties
+++ b/kafka-eagle-web/src/main/resources/conf/system-config.properties
@@ -56,6 +56,7 @@ kafka.eagle.metrics.retain=15
 kafka.eagle.distributed.enable=true
 kafka.eagle.sql.topic.records.max=5000
 kafka.eagle.sql.fix.error=true
+kafka.eagle.sql.worknode.port=8787
 kafka.eagle.sql.worknode.rpc.timeout=120000
 kafka.eagle.sql.worknode.fetch.threshold=5000
 kafka.eagle.sql.worknode.fetch.timeout=20000
