--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -62,13 +62,13 @@ kafka.eagle.metrics.retain=15
 # master quartz time
 ######################################
 kafka.eagle.quartz.master.time=* */1 * * * ?
-kafka.eagle.distributed.enable=true
 
 ######################################
 # kafka sql topic records max
 ######################################
 kafka.eagle.sql.topic.records.max=5000
 kafka.eagle.sql.worknode.port=8787
+# kafka.eagle.sql.distributed.enable=false
 kafka.eagle.sql.worknode.rpc.timeout=300000
 kafka.eagle.sql.worknode.fetch.threshold=20
 kafka.eagle.sql.worknode.fetch.timeout=20000
