add mail account send api

--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -68,7 +68,7 @@ kafka.eagle.quartz.master.time=* */1 * * * ?
 ######################################
 kafka.eagle.sql.topic.records.max=5000
 kafka.eagle.sql.worknode.port=8787
-kafka.eagle.sql.distributed.enable=true
+kafka.eagle.sql.distributed.enable=false
 kafka.eagle.sql.worknode.rpc.timeout=300000
 kafka.eagle.sql.worknode.fetch.threshold=20
 kafka.eagle.sql.worknode.fetch.timeout=20000
