--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <packaging>pom</packaging>
     <version>2.0.3</version>
     <name>ke</name>
-    <url>https://repo.spring.io/libs-snapshot/</url>
+    <url>https://repo1.maven.org/maven2/</url>
 
     <properties>
         <project.version>2.0.3</project.version>
