--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -2,18 +2,12 @@
 # multi zookeeper & kafka cluster list
 ######################################
 kafka.eagle.zk.cluster.alias=cluster1
-cluster1.zk.list=10.100.173.206:2181,10.100.173.207:2181,10.100.173.208:2181
-#cluster1_0_1.zk.list=127.0.0.1:2181/v_1_0_1
-cluster2.zk.list=127.0.0.1:2181/plain
-cluster3.zk.list=127.0.0.1:2181/scram
-cluster4.zk.list=dn1:2181
+cluster1.zk.list=10.100.172.147:2181,10.100.172.171:2181,10.100.172.173:2181
 
 ######################################
 # broker size online list
 ######################################
 cluster1.kafka.eagle.broker.size=10
-cluster1_0_1.kafka.eagle.broker.size=10
-cluster4.kafka.eagle.broker.size=10
 
 ######################################
 # zk client thread limit
@@ -29,10 +23,7 @@ kafka.eagle.webui.port=8048
 # kafka offset storage
 ######################################
 cluster1.kafka.eagle.offset.storage=kafka
-cluster1_0_1.kafka.eagle.offset.storage=kafka
-cluster2.kafka.eagle.offset.storage=kafka
-#cluster3.kafka.eagle.offset.storage=kafka
-cluster4.kafka.eagle.offset.storage=kafka
+
 
 ######################################
 # kafka metrics, 15 days by default
@@ -55,20 +46,14 @@ kafka.eagle.topic.token=keadmin
 ######################################
 # kafka sasl authenticate
 ######################################
-cluster1.kafka.eagle.sasl.enable=true
+cluster1.kafka.eagle.sasl.enable=false
 cluster1.kafka.eagle.sasl.protocol=SASL_PLAINTEXT
-#cluster1.kafka.eagle.sasl.mechanism=SCRAM-SHA-256
-cluster1.kafka.eagle.sasl.mechanism=PLAIN
-cluster1.kafka.eagle.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="admin" password="admin_not_used_tcyx";
+cluster1.kafka.eagle.sasl.mechanism=SCRAM-SHA-256
+#cluster1.kafka.eagle.sasl.mechanism=PLAIN
+cluster1.kafka.eagle.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="kafkaadmin" password="kafkaadmin";
 cluster1.kafka.eagle.sasl.client.id=
 cluster1.kafka.eagle.sasl.cgroup.enable=false
 cluster1.kafka.eagle.sasl.cgroup.topics=
-
-cluster4.kafka.eagle.sasl.enable=false
-cluster4.kafka.eagle.sasl.protocol=SASL_PLAINTEXT
-cluster4.kafka.eagle.sasl.mechanism=PLAIN
-cluster4.kafka.eagle.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="admin" password="admin-secret";
-cluster4.kafka.eagle.sasl.client.id=
 
 ######################################
 # kafka ssl authenticate
@@ -86,12 +71,12 @@ cluster1.kafka.eagle.ssl.cgroup.topics=
 ######################################
 # kafka jdbc driver address
 ######################################
-kafka.eagle.driver=com.mysql.jdbc.Driver
-kafka.eagle.url=jdbc:mysql://10.100.172.33:3306/ke?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-kafka.eagle.username=dev
-kafka.eagle.password=123456
+#kafka.eagle.driver=com.mysql.jdbc.Driver
+#kafka.eagle.url=jdbc:mysql://10.100.172.33:3306/ke?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+#kafka.eagle.username=dev
+#kafka.eagle.password=123456
 
-#kafka.eagle.driver=org.sqlite.JDBC
-#kafka.eagle.url=jdbc:sqlite:/Users/dengjie/webserver/hadoop/sqlite/ke.db
-#kafka.eagle.username=root
-#kafka.eagle.password=root
+kafka.eagle.driver=org.sqlite.JDBC
+kafka.eagle.url=jdbc:sqlite:/Users/jefffeng/ke.db
+kafka.eagle.username=root
+kafka.eagle.password=root
