--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -2,11 +2,11 @@
 # multi zookeeper & kafka cluster list
 ######################################
 kafka.eagle.zk.cluster.alias=cluster1
-cluster1.zk.list=10.100.172.147:2181,10.100.172.171:2181,10.100.172.173:2181
+cluster1.zk.list=10.100.172.147:2181
 
 # zookeeper enable acl
 ######################################
-cluster1.zk.acl.enable=true
+cluster1.zk.acl.enable=false
 cluster1.zk.acl.schema=digest
 cluster1.zk.acl.username=kafka
 cluster1.zk.acl.password=kafkapasswd
@@ -18,7 +18,7 @@ cluster1.kafka.eagle.broker.size=10
 ######################################
 # zk client thread limit
 ######################################
-kafka.zk.limit.size=32
+kafka.zk.limit.size=1
 
 ######################################
 # kafka eagle webui port
@@ -72,7 +72,7 @@ kafka.eagle.topic.token=keadmin
 ######################################
 # kafka sasl authenticate
 ######################################
-cluster1.kafka.eagle.sasl.enable=false
+cluster1.kafka.eagle.sasl.enable=true
 cluster1.kafka.eagle.sasl.protocol=SASL_PLAINTEXT
 cluster1.kafka.eagle.sasl.mechanism=SCRAM-SHA-256
 cluster1.kafka.eagle.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="kafkaadmin" password="kafkaadmin";
@@ -109,6 +109,6 @@ cluster1.kafka.eagle.ssl.cgroup.topics=
 #kafka.eagle.password=123456
 
 kafka.eagle.driver=org.sqlite.JDBC
-kafka.eagle.url=jdbc:sqlite:/Users/dengjie/webserver/hadoop/sqlite/kenew.db
+kafka.eagle.url=jdbc:sqlite:/Users/jefffeng/kenew.db
 kafka.eagle.username=root
 kafka.eagle.password=root
