Based on mysql-connector-java-8.0.21, the default mysql jdbc driver configuration should be com.mysql.cj.jdbc.Driver.

--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -113,7 +113,7 @@ cluster1.kafka.eagle.ssl.cgroup.topics=
 ######################################
 # kafka jdbc driver address
 ######################################
-kafka.eagle.driver=com.mysql.jdbc.Driver
+kafka.eagle.driver=com.mysql.cj.jdbc.Driver
 kafka.eagle.url=jdbc:mysql://127.0.0.1:3306/ke?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 kafka.eagle.username=root
 kafka.eagle.password=123456
