add topic throughput on dashboard

--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -53,6 +53,12 @@ cluster2.kafka.eagle.offset.storage=kafka
 cluster4.kafka.eagle.offset.storage=kafka
 
 ######################################
+# kafka jmx uri
+######################################
+cluster1.kafka.eagle.jmx.uri=service:jmx:rmi:///jndi/rmi://%s/jmxrmi
+
+
+######################################
 # kafka metrics, 15 days by default
 ######################################
 kafka.eagle.metrics.charts=true
