--- a/kafka-eagle-web/src/main/resources/conf/system-config.properties
+++ b/kafka-eagle-web/src/main/resources/conf/system-config.properties
@@ -45,6 +45,11 @@ cluster1.kafka.eagle.offset.storage=kafka
 cluster2.kafka.eagle.offset.storage=zk
 
 ######################################
+# kafka jmx uri
+######################################
+cluster1.kafka.eagle.jmx.uri=service:jmx:rmi:///jndi/rmi://%s/jmxrmi
+
+######################################
 # kafka metrics, 15 days by default
 ######################################
 kafka.eagle.metrics.charts=true
