fixed ssl and add table index

--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -113,14 +113,15 @@ cluster1.kafka.eagle.ssl.truststore.password=ke123456
 cluster1.kafka.eagle.ssl.keystore.location=/Users/dengjie/workspace/ssl/certificates/kafka.keystore
 cluster1.kafka.eagle.ssl.keystore.password=ke123456
 cluster1.kafka.eagle.ssl.key.password=ke123456
+cluster1.kafka.eagle.ssl.endpoint.identification.algorithm=
 cluster1.kafka.eagle.ssl.cgroup.enable=false
 cluster1.kafka.eagle.ssl.cgroup.topics=
 
 ######################################
 # kafka jdbc driver address
 ######################################
-kafka.eagle.driver=com.mysql.jdbc.Driver
-kafka.eagle.url=jdbc:mysql://127.0.0.1:3306/ke?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+kafka.eagle.driver=com.mysql.cj.jdbc.Driver
+kafka.eagle.url=jdbc:mysql://127.0.0.1:3306/ke_dev?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 kafka.eagle.username=root
 kafka.eagle.password=123456
 #kafka.eagle.driver=org.sqlite.JDBC
