--- a/kafka-eagle-web/src/main/resources/conf/system-config.properties
+++ b/kafka-eagle-web/src/main/resources/conf/system-config.properties
@@ -95,6 +95,7 @@ cluster3.kafka.eagle.ssl.truststore.password=
 cluster3.kafka.eagle.ssl.keystore.location=
 cluster3.kafka.eagle.ssl.keystore.password=
 cluster3.kafka.eagle.ssl.key.password=
+cluster3.kafka.eagle.ssl.endpoint.identification.algorithm=https
 cluster3.kafka.eagle.blacklist.topics=
 cluster3.kafka.eagle.ssl.cgroup.enable=false
 cluster3.kafka.eagle.ssl.cgroup.topics=
@@ -110,7 +111,7 @@ kafka.eagle.password=www.kafka-eagle.org
 ######################################
 # kafka mysql jdbc driver address
 ######################################
-#kafka.eagle.driver=com.mysql.jdbc.Driver
+#kafka.eagle.driver=com.mysql.cj.jdbc.Driver
 #kafka.eagle.url=jdbc:mysql://127.0.0.1:3306/ke?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 #kafka.eagle.username=root
 #kafka.eagle.password=123456
