--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -113,7 +113,7 @@ cluster1.kafka.eagle.ssl.truststore.password=ke123456
 cluster1.kafka.eagle.ssl.keystore.location=/Users/dengjie/workspace/ssl/certificates/kafka.keystore
 cluster1.kafka.eagle.ssl.keystore.password=ke123456
 cluster1.kafka.eagle.ssl.key.password=ke123456
-cluster1.kafka.eagle.ssl.endpoint.identification.algorithm=
+cluster1.kafka.eagle.ssl.endpoint.identification.algorithm=https
 cluster1.kafka.eagle.ssl.cgroup.enable=false
 cluster1.kafka.eagle.ssl.cgroup.topics=
 
