add topic preview

--- a/kafka-eagle-web/src/main/resources/conf/system-config.properties
+++ b/kafka-eagle-web/src/main/resources/conf/system-config.properties
@@ -59,6 +59,7 @@ kafka.eagle.metrics.retain=15
 # kafka sql topic records max
 ######################################
 kafka.eagle.sql.topic.records.max=5000
+kafka.eagle.sql.topic.preview.records.max=10
 
 ######################################
 # delete kafka topic token
