--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -73,6 +73,7 @@ kafka.eagle.quartz.master.time=* */1 * * * ?
 # kafka sql topic records max
 ######################################
 kafka.eagle.sql.topic.records.max=5000
+kafka.eagle.sql.topic.preview.records.max=10
 kafka.eagle.sql.worknode.port=8787
 kafka.eagle.sql.distributed.enable=false
 kafka.eagle.sql.worknode.rpc.timeout=300000
