add export data tools

--- a/kafka-eagle-common/pom.xml
+++ b/kafka-eagle-common/pom.xml
@@ -134,5 +134,11 @@
             <artifactId>calcite-core</artifactId>
             <version>${calcite.version}</version>
         </dependency>
+        <!-- commons csv -->
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.9.4</version>
+        </dependency>
     </dependencies>
 </project>
