rename prefixed 'kafka.eagle.' to 'efak.'

--- a/kafka-eagle-common/src/main/resources/system-config.properties
+++ b/kafka-eagle-common/src/main/resources/system-config.properties
@@ -1,7 +1,8 @@
 ######################################
 # multi zookeeper & kafka cluster list
+# Settings prefixed with 'kafka.eagle.' will be deprecated, use 'efak.' instead
 ######################################
-kafka.eagle.zk.cluster.alias=cluster1
+efak.zk.cluster.alias=cluster1
 cluster1.zk.list=127.0.0.1:2181
 cluster1_0_1.zk.list=127.0.0.1:2181/v_1_0_1
 cluster2.zk.list=127.0.0.1:2181/plain
@@ -19,9 +20,9 @@ cluster4.zk.acl.password=test123
 ######################################
 # broker size online list
 ######################################
-cluster1.kafka.eagle.broker.size=10
-cluster1_0_1.kafka.eagle.broker.size=10
-cluster4.kafka.eagle.broker.size=10
+cluster1.efak.broker.size=10
+cluster1_0_1.efak.broker.size=10
+cluster4.efak.broker.size=10
 
 ######################################
 # zk client thread limit
@@ -29,103 +30,103 @@ cluster4.kafka.eagle.broker.size=10
 kafka.zk.limit.size=32
 
 ######################################
-# kafka eagle webui port
+# EFAK webui port
 ######################################
-kafka.eagle.webui.port=8048
+efak.webui.port=8048
 
 ######################################
 # kafka jmx acl and ssl authenticate
 ######################################
-cluster1.kafka.eagle.jmx.acl=false
-cluster1.kafka.eagle.jmx.user=keadmin
-cluster1.kafka.eagle.jmx.password=keadmin123
-cluster1.kafka.eagle.jmx.ssl=false
-cluster1.kafka.eagle.jmx.truststore.location=/Users/dengjie/workspace/ssl/certificates/kafka.truststore
-cluster1.kafka.eagle.jmx.truststore.password=ke123456
+cluster1.efak.jmx.acl=false
+cluster1.efak.jmx.user=keadmin
+cluster1.efak.jmx.password=keadmin123
+cluster1.efak.jmx.ssl=false
+cluster1.efak.jmx.truststore.location=/Users/dengjie/workspace/ssl/certificates/kafka.truststore
+cluster1.efak.jmx.truststore.password=ke123456
 
 ######################################
 # kafka offset storage
 ######################################
-cluster1.kafka.eagle.offset.storage=kafka
-cluster1_0_1.kafka.eagle.offset.storage=kafka
-cluster2.kafka.eagle.offset.storage=kafka
-#cluster3.kafka.eagle.offset.storage=kafka
-cluster4.kafka.eagle.offset.storage=kafka
+cluster1.efak.offset.storage=kafka
+cluster1_0_1.efak.offset.storage=kafka
+cluster2.efak.offset.storage=kafka
+#cluster3.efak.offset.storage=kafka
+cluster4.efak.offset.storage=kafka
 
 ######################################
 # kafka jmx uri
 ######################################
-cluster1.kafka.eagle.jmx.uri=service:jmx:rmi:///jndi/rmi://%s/jmxrmi
+cluster1.efak.jmx.uri=service:jmx:rmi:///jndi/rmi://%s/jmxrmi
 
 
 ######################################
 # kafka metrics, 15 days by default
 ######################################
-kafka.eagle.metrics.charts=true
-kafka.eagle.metrics.retain=15
+efak.metrics.charts=true
+efak.metrics.retain=15
 
 ######################################
 # master quartz time
 ######################################
-kafka.eagle.quartz.master.time=* */1 * * * ?
+efak.quartz.master.time=* */1 * * * ?
 
 ######################################
 # kafka sql topic records max
 ######################################
-kafka.eagle.sql.topic.records.max=5000
-kafka.eagle.sql.topic.preview.records.max=10
-kafka.eagle.sql.worknode.port=8787
-kafka.eagle.sql.distributed.enable=false
-kafka.eagle.sql.worknode.rpc.timeout=300000
-kafka.eagle.sql.worknode.fetch.threshold=5000
-kafka.eagle.sql.worknode.fetch.timeout=20000
-kafka.eagle.sql.worknode.server.path=/Users/dengjie/workspace/kafka-eagle-plus/kafka-eagle-common/src/main/resources/works
+efak.sql.topic.records.max=5000
+efak.sql.topic.preview.records.max=10
+efak.sql.worknode.port=8787
+efak.sql.distributed.enable=false
+efak.sql.worknode.rpc.timeout=300000
+efak.sql.worknode.fetch.threshold=5000
+efak.sql.worknode.fetch.timeout=20000
+efak.sql.worknode.server.path=/Users/dengjie/workspace/kafka-eagle-plus/kafka-eagle-common/src/main/resources/works
 
 
 ######################################
 # delete kafka topic token
 ######################################
-kafka.eagle.topic.token=keadmin
+efak.topic.token=keadmin
 
 ######################################
 # kafka sasl authenticate
 ######################################
-cluster1.kafka.eagle.sasl.enable=false
-cluster1.kafka.eagle.sasl.protocol=SASL_PLAINTEXT
-cluster1.kafka.eagle.sasl.mechanism=SCRAM-SHA-256
-cluster1.kafka.eagle.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="admin" password="admin-secret";
-cluster1.kafka.eagle.sasl.client.id=
-cluster1.kafka.eagle.blacklist.topics=
-cluster1.kafka.eagle.sasl.cgroup.enable=false
-cluster1.kafka.eagle.sasl.cgroup.topics=kafka20191230,kafka20191217
-cluster4.kafka.eagle.sasl.enable=false
-cluster4.kafka.eagle.sasl.protocol=SASL_PLAINTEXT
-cluster4.kafka.eagle.sasl.mechanism=PLAIN
-cluster4.kafka.eagle.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="admin" password="admin-secret";
-cluster4.kafka.eagle.sasl.client.id=
+cluster1.efak.sasl.enable=false
+cluster1.efak.sasl.protocol=SASL_PLAINTEXT
+cluster1.efak.sasl.mechanism=SCRAM-SHA-256
+cluster1.efak.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="admin" password="admin-secret";
+cluster1.efak.sasl.client.id=
+cluster1.efak.blacklist.topics=
+cluster1.efak.sasl.cgroup.enable=false
+cluster1.efak.sasl.cgroup.topics=kafka20191230,kafka20191217
+cluster4.efak.sasl.enable=false
+cluster4.efak.sasl.protocol=SASL_PLAINTEXT
+cluster4.efak.sasl.mechanism=PLAIN
+cluster4.efak.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="admin" password="admin-secret";
+cluster4.efak.sasl.client.id=
 
 ######################################
 # kafka ssl authenticate
 ######################################
-cluster1.kafka.eagle.ssl.enable=false
-cluster1.kafka.eagle.ssl.protocol=SSL
-cluster1.kafka.eagle.ssl.truststore.location=/Users/dengjie/workspace/ssl/certificates/kafka.truststore
-cluster1.kafka.eagle.ssl.truststore.password=ke123456
-cluster1.kafka.eagle.ssl.keystore.location=/Users/dengjie/workspace/ssl/certificates/kafka.keystore
-cluster1.kafka.eagle.ssl.keystore.password=ke123456
-cluster1.kafka.eagle.ssl.key.password=ke123456
-cluster1.kafka.eagle.ssl.endpoint.identification.algorithm=https
-cluster1.kafka.eagle.ssl.cgroup.enable=false
-cluster1.kafka.eagle.ssl.cgroup.topics=
+cluster1.efak.ssl.enable=false
+cluster1.efak.ssl.protocol=SSL
+cluster1.efak.ssl.truststore.location=/Users/dengjie/workspace/ssl/certificates/kafka.truststore
+cluster1.efak.ssl.truststore.password=ke123456
+cluster1.efak.ssl.keystore.location=/Users/dengjie/workspace/ssl/certificates/kafka.keystore
+cluster1.efak.ssl.keystore.password=ke123456
+cluster1.efak.ssl.key.password=ke123456
+cluster1.efak.ssl.endpoint.identification.algorithm=https
+cluster1.efak.ssl.cgroup.enable=false
+cluster1.efak.ssl.cgroup.topics=
 
 ######################################
 # kafka jdbc driver address
 ######################################
-kafka.eagle.driver=com.mysql.cj.jdbc.Driver
-kafka.eagle.url=jdbc:mysql://127.0.0.1:3306/ke_dev?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-kafka.eagle.username=root
-kafka.eagle.password=123456
-#kafka.eagle.driver=org.sqlite.JDBC
-#kafka.eagle.url=jdbc:sqlite:/Users/dengjie/webserver/hadoop/sqlite/ke.db
-#kafka.eagle.username=root
-#kafka.eagle.password=root
+efak.driver=com.mysql.cj.jdbc.Driver
+efak.url=jdbc:mysql://127.0.0.1:3306/ke_dev?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+efak.username=root
+efak.password=123456
+#efak.driver=org.sqlite.JDBC
+#efak.url=jdbc:sqlite:/Users/dengjie/webserver/hadoop/sqlite/ke.db
+#efak.username=root
+#efak.password=root
