--- a/kafka-eagle-web/src/main/resources/conf/system-config.properties
+++ b/kafka-eagle-web/src/main/resources/conf/system-config.properties
@@ -1,7 +1,8 @@
 ######################################
 # multi zookeeper & kafka cluster list
+# Settings prefixed with 'kafka.eagle.' will be deprecated, use 'efak.' instead
 ######################################
-kafka.eagle.zk.cluster.alias=cluster1,cluster2
+efak.zk.cluster.alias=cluster1,cluster2
 cluster1.zk.list=tdn1:2181,tdn2:2181,tdn3:2181
 cluster2.zk.list=xdn10:2181,xdn11:2181,xdn12:2181
 
@@ -16,7 +17,7 @@ cluster1.zk.acl.password=test123
 ######################################
 # broker size online list
 ######################################
-cluster1.kafka.eagle.broker.size=20
+cluster1.efak.broker.size=20
 
 ######################################
 # zk client thread limit
@@ -24,96 +25,96 @@ cluster1.kafka.eagle.broker.size=20
 kafka.zk.limit.size=32
 
 ######################################
-# kafka eagle webui port
+# EFAK webui port
 ######################################
-kafka.eagle.webui.port=8048
+efak.webui.port=8048
 
 ######################################
 # kafka jmx acl and ssl authenticate
 ######################################
-cluster1.kafka.eagle.jmx.acl=false
-cluster1.kafka.eagle.jmx.user=keadmin
-cluster1.kafka.eagle.jmx.password=keadmin123
-cluster1.kafka.eagle.jmx.ssl=false
-cluster1.kafka.eagle.jmx.truststore.location=/Users/dengjie/workspace/ssl/certificates/kafka.truststore
-cluster1.kafka.eagle.jmx.truststore.password=ke123456
+cluster1.efak.jmx.acl=false
+cluster1.efak.jmx.user=keadmin
+cluster1.efak.jmx.password=keadmin123
+cluster1.efak.jmx.ssl=false
+cluster1.efak.jmx.truststore.location=/data/ssl/certificates/kafka.truststore
+cluster1.efak.jmx.truststore.password=ke123456
 
 ######################################
 # kafka offset storage
 ######################################
-cluster1.kafka.eagle.offset.storage=kafka
-cluster2.kafka.eagle.offset.storage=zk
+cluster1.efak.offset.storage=kafka
+cluster2.efak.offset.storage=zk
 
 ######################################
 # kafka jmx uri
 ######################################
-cluster1.kafka.eagle.jmx.uri=service:jmx:rmi:///jndi/rmi://%s/jmxrmi
+cluster1.efak.jmx.uri=service:jmx:rmi:///jndi/rmi://%s/jmxrmi
 
 ######################################
 # kafka metrics, 15 days by default
 ######################################
-kafka.eagle.metrics.charts=true
-kafka.eagle.metrics.retain=15
+efak.metrics.charts=true
+efak.metrics.retain=15
 
 ######################################
 # kafka sql topic records max
 ######################################
-kafka.eagle.sql.topic.records.max=5000
-kafka.eagle.sql.topic.preview.records.max=10
+efak.sql.topic.records.max=5000
+efak.sql.topic.preview.records.max=10
 
 ######################################
 # delete kafka topic token
 ######################################
-kafka.eagle.topic.token=keadmin
+efak.topic.token=keadmin
 
 ######################################
 # kafka sasl authenticate
 ######################################
-cluster1.kafka.eagle.sasl.enable=false
-cluster1.kafka.eagle.sasl.protocol=SASL_PLAINTEXT
-cluster1.kafka.eagle.sasl.mechanism=SCRAM-SHA-256
-cluster1.kafka.eagle.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="kafka" password="kafka-eagle";
-cluster1.kafka.eagle.sasl.client.id=
-cluster1.kafka.eagle.blacklist.topics=
-cluster1.kafka.eagle.sasl.cgroup.enable=false
-cluster1.kafka.eagle.sasl.cgroup.topics=
-cluster2.kafka.eagle.sasl.enable=false
-cluster2.kafka.eagle.sasl.protocol=SASL_PLAINTEXT
-cluster2.kafka.eagle.sasl.mechanism=PLAIN
-cluster2.kafka.eagle.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="kafka" password="kafka-eagle";
-cluster2.kafka.eagle.sasl.client.id=
-cluster2.kafka.eagle.blacklist.topics=
-cluster2.kafka.eagle.sasl.cgroup.enable=false
-cluster2.kafka.eagle.sasl.cgroup.topics=
+cluster1.efak.sasl.enable=false
+cluster1.efak.sasl.protocol=SASL_PLAINTEXT
+cluster1.efak.sasl.mechanism=SCRAM-SHA-256
+cluster1.efak.sasl.jaas.config=org.apache.kafka.common.security.scram.ScramLoginModule required username="kafka" password="kafka-eagle";
+cluster1.efak.sasl.client.id=
+cluster1.efak.blacklist.topics=
+cluster1.efak.sasl.cgroup.enable=false
+cluster1.efak.sasl.cgroup.topics=
+cluster2.efak.sasl.enable=false
+cluster2.efak.sasl.protocol=SASL_PLAINTEXT
+cluster2.efak.sasl.mechanism=PLAIN
+cluster2.efak.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="kafka" password="kafka-eagle";
+cluster2.efak.sasl.client.id=
+cluster2.efak.blacklist.topics=
+cluster2.efak.sasl.cgroup.enable=false
+cluster2.efak.sasl.cgroup.topics=
 
 ######################################
 # kafka ssl authenticate
 ######################################
-cluster3.kafka.eagle.ssl.enable=false
-cluster3.kafka.eagle.ssl.protocol=SSL
-cluster3.kafka.eagle.ssl.truststore.location=
-cluster3.kafka.eagle.ssl.truststore.password=
-cluster3.kafka.eagle.ssl.keystore.location=
-cluster3.kafka.eagle.ssl.keystore.password=
-cluster3.kafka.eagle.ssl.key.password=
-cluster3.kafka.eagle.ssl.endpoint.identification.algorithm=https
-cluster3.kafka.eagle.blacklist.topics=
-cluster3.kafka.eagle.ssl.cgroup.enable=false
-cluster3.kafka.eagle.ssl.cgroup.topics=
+cluster3.efak.ssl.enable=false
+cluster3.efak.ssl.protocol=SSL
+cluster3.efak.ssl.truststore.location=
+cluster3.efak.ssl.truststore.password=
+cluster3.efak.ssl.keystore.location=
+cluster3.efak.ssl.keystore.password=
+cluster3.efak.ssl.key.password=
+cluster3.efak.ssl.endpoint.identification.algorithm=https
+cluster3.efak.blacklist.topics=
+cluster3.efak.ssl.cgroup.enable=false
+cluster3.efak.ssl.cgroup.topics=
 
 ######################################
 # kafka sqlite jdbc driver address
 ######################################
-kafka.eagle.driver=org.sqlite.JDBC
-kafka.eagle.url=jdbc:sqlite:/hadoop/kafka-eagle/db/ke.db
-kafka.eagle.username=root
-kafka.eagle.password=www.kafka-eagle.org
+efak.driver=org.sqlite.JDBC
+efak.url=jdbc:sqlite:/hadoop/kafka-eagle/db/ke.db
+efak.username=root
+efak.password=www.kafka-eagle.org
 
 ######################################
 # kafka mysql jdbc driver address
 ######################################
-#kafka.eagle.driver=com.mysql.cj.jdbc.Driver
-#kafka.eagle.url=jdbc:mysql://127.0.0.1:3306/ke?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-#kafka.eagle.username=root
-#kafka.eagle.password=123456
+#efak.driver=com.mysql.cj.jdbc.Driver
+#efak.url=jdbc:mysql://127.0.0.1:3306/ke?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+#efak.username=root
+#efak.password=123456
 
